# sqlformat

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: build.yml  rust.yml
src/: main.rs
